# faast-foundations_ifs

assignments/: pyproject.toml
