[project]
name = "life_expectancy"
version = "0.1.0"
description = "A cool package doing cool things."
authors = [{name="Inês Silva", email="insfsilva25@gmail.com"}]
dependencies = ["requests", "pandas"]

readme = "README.md"
requires-python = ">=3.8"


[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80